tests/functional2/lang/dup-attrs/parse-fail-4.err.exp
error: attribute 'services.ssh.port' already defined at /pwd/in.nix:2:3
       at /pwd/in.nix:3:3:
            2|   services.ssh.port = 22;
            3|   services.ssh.port = 23;
             |   ^
            4| }
